Closed
Bug 415170
Opened 18 years ago
Closed 18 years ago
On Mac OS X, any comment is omitted by the Crash Reporter
Categories
(Toolkit :: Crash Reporting, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla1.9beta3
People
(Reporter: alqahira, Assigned: ted)
References
Details
Attachments
(1 file)
|
1.74 KB,
patch
|
nick.kreeger
:
review+
mtschrep
:
approval1.9b3+
|
Details | Diff | Splinter Review |
I've filed several crashes with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b3pre) Gecko/2008012904 Minefield/3.0b3pre and added several comments, yet none of the reports on crash-stats show any comments :(
0d5fa930-cf7d-11dc-8af2-001a4bd43ed6
4dac41ee-cfbe-11dc-8dc1-001a4bd43ef6
12ceae59-d055-11dc-aa09-001a4bd43ed6
I've checked with a fresh profile as well.
Flags: blocking1.9?
| Reporter | ||
Comment 1•18 years ago
|
||
Bleh, forgot the bp- for linkification :(
bp-0d5fa930-cf7d-11dc-8af2-001a4bd43ed6
bp-4dac41ee-cfbe-11dc-8dc1-001a4bd43ef6
bp-12ceae59-d055-11dc-aa09-001a4bd43ed6
Severity: minor → major
Comment 2•18 years ago
|
||
Morgamic/Ted is this client side or server side?
Flags: blocking1.9? → blocking1.9+
Priority: -- → P1
Target Milestone: --- → mozilla1.9beta3
| Assignee | ||
Comment 3•18 years ago
|
||
Client side, morgamic tested Win32. I'm investigating now.
Assignee: nobody → ted.mielczarek
| Assignee | ||
Comment 4•18 years ago
|
||
Ok, we're using the wrong notification for the textarea, textDidEndEditing vs. textDidChange. textDidEndEditing only fires when the text area loses focus. If you don't tab out (and you can't tab out unless you have enabled full keyboard access or checked the "email me" box), the text never gets stored.
Easy patch, if hotel wifi will let me CVS. :-/
| Assignee | ||
Comment 5•18 years ago
|
||
Use the right notification.
Attachment #300820 -
Flags: review?(nick.kreeger)
Comment 6•18 years ago
|
||
Comment on attachment 300820 [details] [diff] [review]
use textDidEndEditing instead
r=me
Attachment #300820 -
Flags: review?(nick.kreeger) → review+
| Assignee | ||
Updated•18 years ago
|
Attachment #300820 -
Flags: approval1.9b3?
Comment 7•18 years ago
|
||
Comment on attachment 300820 [details] [diff] [review]
use textDidEndEditing instead
a+ schrep
Attachment #300820 -
Flags: approval1.9b3? → approval1.9b3+
| Assignee | ||
Updated•18 years ago
|
Keywords: checkin-needed
Comment 8•18 years ago
|
||
Checking in toolkit/crashreporter/client/crashreporter_osx.h;
/cvsroot/mozilla/toolkit/crashreporter/client/crashreporter_osx.h,v <-- crashreporter_osx.h
new revision: 1.8; previous revision: 1.7
done
Checking in toolkit/crashreporter/client/crashreporter_osx.mm;
/cvsroot/mozilla/toolkit/crashreporter/client/crashreporter_osx.mm,v <-- crashreporter_osx.mm
new revision: 1.18; previous revision: 1.17
done
Comment 9•18 years ago
|
||
verified fixed using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b3pre) Gecko/2008020104 Minefield/3.0b3pre. http://crash-stats.mozilla.com/report/index/0889f5c2-d122-11dc-a145-001a4bd43ed6 shows the comments I entered.
Status: RESOLVED → VERIFIED
| Reporter | ||
Comment 10•18 years ago
|
||
I also successfully submitted a report using multiple scripts and had it display correctly :-)
bp-e3c0265e-d127-11dc-9cc6-001a4bd46e84
You need to log in
before you can comment on or make changes to this bug.
Description
•