Bug 415170 - "On Mac OS X, any comment is omitted by the Crash Reporter" (use textDidEndEditing instead) [p=ted.mielczarek@gmail.com (Ted Mielczarek) r=nkreeger a1.9b3=schrep]